classDiagram
direction LR

class Pipeline {
  name: str
  +addTask(t): void
}

class Task {
  name: str
  +addCommand(c): void
  +askUserInputs(): Map
  +run(ctx): void
}

class Command {
  key: str     
  label: str 
  +addArg(a): void
  +isReady(): bool
  +execute(): int
}

class Argument {
  name: str           
  type: str             
  +isValid(): bool
}

Pipeline "1" *-- "1..*" Task
Task "1" *-- "1..*" Command
Command "1" *-- "1..*" Argument
